force-app/main/default/objects/WeightronEvent__c/WeightronEvent__c.object-meta.xml
<CustomObject>
    <label>Weightron Event</label>
    <nameField>
        <label>Ticket No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weightron Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>