force-app/main/default/objects/WeightronEvent__c/fields/DateOfTip__c.field-meta.xml
<CustomField>
    <fullName>DateOfTip__c</fullName>
    <label>Date of Tip</label>
    <type>Date</type>
</CustomField>