force-app/main/default/objects/WeightronEvent__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <label>Driver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>