force-app/main/default/objects/WeightronEvent__c/fields/Net__c.field-meta.xml
<CustomField>
    <fullName>Net__c</fullName>
    <label>Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>