force-app/main/default/objects/WeightronEvent__c/fields/RoundNumber__c.field-meta.xml
<CustomField>
    <fullName>RoundNumber__c</fullName>
    <label>Round Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>