force-app/main/default/objects/WeightronEvent__c/fields/TimeOfTip__c.field-meta.xml
<CustomField>
    <fullName>TimeOfTip__c</fullName>
    <label>Time of Tip</label>
    <type>Time</type>
</CustomField>