force-app/main/default/objects/WeightronEvent__c/fields/Timestamp1__c.field-meta.xml
<CustomField>
    <fullName>Timestamp1__c</fullName>
    <label>Timestamp 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>