force-app/main/default/objects/WeightronEvent__c/fields/Timestamp2__c.field-meta.xml
<CustomField>
    <fullName>Timestamp2__c</fullName>
    <label>Timestamp 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>