force-app/main/default/objects/WeightronEvent__c/fields/TypeOfWaste__c.field-meta.xml
<CustomField>
    <fullName>TypeOfWaste__c</fullName>
    <label>Type of Waste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>