force-app/main/default/objects/WeightronEvent__c/fields/Weight1__c.field-meta.xml
<CustomField>
    <fullName>Weight1__c</fullName>
    <label>Weight 1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>