force-app/main/default/objects/WeightronEvent__c/fields/Weight2__c.field-meta.xml
<CustomField>
    <fullName>Weight2__c</fullName>
    <label>Weight 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>